--- a/Sources/CLK.Setting/CLK.Setting/CLK.Setting.csproj
+++ b/Sources/CLK.Setting/CLK.Setting/CLK.Setting.csproj
@@ -34,10 +34,20 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <ProjectReference Include="..\..\CLK\CLK\CLK.csproj">
+      <Project>{55a100b9-e43e-4e90-a2d8-2b5e5ef31490}</Project>
+      <Name>CLK %28CLK\CLK%29</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementation\MemorySettingContext.cs" />
+    <Compile Include="Implementation\MemorySettingRepository.cs" />
+    <Compile Include="ISettingRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingCollection.cs" />
+    <Compile Include="SettingContext.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
