--- a/Sources/CLK.Settings/CLK.Settings/CLK.Settings.csproj
+++ b/Sources/CLK.Settings/CLK.Settings/CLK.Settings.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Implementation\MemorySettingRepository.cs" />
     <Compile Include="ISettingRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingCollection.cs" />
+    <Compile Include="SettingDictionary.cs" />
     <Compile Include="SettingContext.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
