--- a/Sources/CLK/CLK/CLK.csproj
+++ b/Sources/CLK/CLK/CLK.csproj
@@ -36,7 +36,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Collections\IStoreRepository.cs" />
+    <Compile Include="Collections\IStoreProvider.cs" />
     <Compile Include="Collections\StoreDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
