--- a/Sources/CLK/CLK.Configuration.Samples/CLK.Configuration.Samples.csproj
+++ b/Sources/CLK/CLK.Configuration.Samples/CLK.Configuration.Samples.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D821CFE4-A1C8-4252-8929-4404155AD5DD}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{9B258443-BA27-4CA7-BD96-22683716936B}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CLK.Configuration</RootNamespace>
-    <AssemblyName>CLK.Configuration</AssemblyName>
+    <RootNamespace>CLK.Configuration.Samples</RootNamespace>
+    <AssemblyName>CLK.Configuration.Samples</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,12 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FreeAttributeConfigurationElement.cs" />
-    <Compile Include="FreeAttributeDictionary.cs" />
-    <Compile Include="FreeAttributeProvider.cs" />
+    <Compile Include="EntityElement.cs" />
+    <Compile Include="EntityElementCollection.cs" />
+    <Compile Include="EntityElementSection.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CLK.Configuration\CLK.Configuration.csproj">
+      <Project>{d821cfe4-a1c8-4252-8929-4404155ad5dd}</Project>
+      <Name>CLK.Configuration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CLK\CLK.csproj">
       <Project>{55a100b9-e43e-4e90-a2d8-2b5e5ef31490}</Project>
       <Name>CLK %28CLK\CLK%29</Name>
