加入CLK.Reflection.Samples專案

--- a/Sources/CLK.Reflection/CLK.Reflection.Samples/App.config
+++ b/Sources/CLK.Reflection/CLK.Reflection.Samples/App.config
@@ -1,6 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+
+
+  <!--configSections-->
+  <configSections>
+    <sectionGroup name="CLK.Reflection.Samples" >
+      <section name="entities" type="CLK.Reflection.Configuration.ReflectConfigurationSection, CLK.Reflection.Configuration" />
+    </sectionGroup>
+  </configSections>
+
+
+  <!--CLK.Reflection.Samples-->
+  <CLK.Reflection.Samples>
+    <entities default="Entity003">      
+      <add name="Entity001" type="CLK.Reflection.Samples.EntityBuilder, CLK.Reflection.Samples" Property001="11111" Property002="22222" />
+      <add name="Entity002" type="CLK.Reflection.Samples.EntityBuilder, CLK.Reflection.Samples" Property001="33333" Property002="44444" />
+      <add name="Entity003" type="CLK.Reflection.Samples.EntityBuilder, CLK.Reflection.Samples" Property001="55555" Property002="66666" />
+    </entities>
+  </CLK.Reflection.Samples>
+
+
 </configuration>
