--- a/Sources/CLK/CLK.Configuration/CLK.Configuration.csproj
+++ b/Sources/CLK/CLK.Configuration/CLK.Configuration.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FreeAttributeConfigurationElement.cs" />
+    <Compile Include="FreeAttributeConfigurationElementCollection.cs" />
     <Compile Include="FreeAttributeDictionary.cs" />
     <Compile Include="FreeAttributeProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
