--- a/Sources/CLK.Reflection/CLK.Reflection.Samples/App.config
+++ b/Sources/CLK.Reflection/CLK.Reflection.Samples/App.config
@@ -4,20 +4,20 @@
 
   <!--configSections-->
   <configSections>
-    <sectionGroup name="CLK.Reflection.Samples" >
+    <sectionGroup name="samples" >
       <section name="entities" type="CLK.Reflection.Configuration.ReflectConfigurationSection, CLK.Reflection.Configuration" />
     </sectionGroup>
   </configSections>
 
 
-  <!--CLK.Reflection.Samples-->
-  <CLK.Reflection.Samples>
+  <!--Samples-->
+  <samples>
     <entities default="Entity003">      
       <add name="Entity001" type="CLK.Reflection.Samples.EntityBuilder, CLK.Reflection.Samples" Property001="11111" Property002="22222" />
       <add name="Entity002" type="CLK.Reflection.Samples.EntityBuilder, CLK.Reflection.Samples" Property001="33333" Property002="44444" />
       <add name="Entity003" type="CLK.Reflection.Samples.EntityBuilder, CLK.Reflection.Samples" Property001="55555" Property002="66666" />
     </entities>
-  </CLK.Reflection.Samples>
+  </samples>
 
 
 </configuration>
