--- a/Sources/CLK.Settings/CLK.Settings/CLK.Settings.csproj
+++ b/Sources/CLK.Settings/CLK.Settings/CLK.Settings.csproj
@@ -36,7 +36,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
     <ProjectReference Include="..\..\CLK\CLK\CLK.csproj">
       <Project>{55a100b9-e43e-4e90-a2d8-2b5e5ef31490}</Project>
-      <Name>CLK %28CLK\CLK%29</Name>
+      <Name>CLK</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
