--- a/Sources/CLK.Configuration/CLK.Configuration.csproj
+++ b/Sources/CLK.Configuration/CLK.Configuration.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FreeAttributeConfigurationElement.cs" />
-    <Compile Include="FreeAttributeConfigurationElementCollection.cs" />
-    <Compile Include="FreeAttributeDictionary.cs" />
-    <Compile Include="FreeAttributeProvider.cs" />
+    <Compile Include="Core\FreeAttributeConfigurationElement.cs" />
+    <Compile Include="Core\FreeAttributeConfigurationElementCollection.cs" />
+    <Compile Include="Core\FreeAttributeDictionary.cs" />
+    <Compile Include="Core\FreeAttributeProvider.cs" />
+    <Compile Include="Operation\ConfigComponentWrapperRepository.cs" />
+    <Compile Include="Operation\ConfigComponentBrokerRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\ConfigReflectContext.cs" />
     <Compile Include="Reflection\ConfigReflectRepository.cs" />
@@ -60,6 +62,7 @@
       <Name>CLK</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
