--- a/Sources/CLK/CLK.csproj
+++ b/Sources/CLK/CLK.csproj
@@ -34,6 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <Folder Include="Operation\Implementation\" />
+    <Folder Include="Reflection\Implementation\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections.Concurrent\ThreadSafeCollection.cs" />
@@ -46,6 +48,11 @@
     <Compile Include="Collections.ObjectModel\ThreadSafeObservableCollection.cs" />
     <Compile Include="Collections\IStoreProvider.cs" />
     <Compile Include="Collections\StoreDictionary.cs" />
+    <Compile Include="Operation\ComponentBroker.cs" />
+    <Compile Include="Operation\ComponentBrokerRepository.cs" />
+    <Compile Include="Operation\OperateContext.cs" />
+    <Compile Include="Operation\ComponentWrapper.cs" />
+    <Compile Include="Operation\ComponentWrapperRepository.cs" />
     <Compile Include="ComponentModel\ITypedNotifyPropertyChanged.cs" />
     <Compile Include="ComponentModel\TypedEventHandler.cs" />
     <Compile Include="ComponentModel\TypedPropertyChangedEventHandler.cs" />
@@ -53,12 +60,13 @@
     <Compile Include="Diagnostics\DebugProvider.cs" />
     <Compile Include="Diagnostics\Implementation\PortableDebugContext.cs" />
     <Compile Include="Diagnostics\Implementation\PortableDebugProvider.cs" />
-    <Compile Include="Pooling\ResourcePool.cs" />
-    <Compile Include="Pooling\ResourceRecord.cs" />
-    <Compile Include="Projection\Device.cs" />
-    <Compile Include="Projection\DeviceCollection.cs" />
-    <Compile Include="Projection\DeviceExplorer.cs" />
-    <Compile Include="Projection\DeviceManager.cs" />
+    <Compile Include="Generic\ConvertMapper.cs" />
+    <Compile Include="ComponentModel.Pooling\ResourcePool.cs" />
+    <Compile Include="ComponentModel.Pooling\ResourceRecord.cs" />
+    <Compile Include="ComponentModel.Exploring\Component.cs" />
+    <Compile Include="ComponentModel.Exploring\ComponentCollection.cs" />
+    <Compile Include="ComponentModel.Exploring\ComponentHost.cs" />
+    <Compile Include="ComponentModel.Exploring\ExploreContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\IReflectRepository.cs" />
     <Compile Include="Reflection\ReflectBuilder.cs" />
