--- a/Sources/Samples/CLK.Settings.Samples.No001/CLK.Settings.Samples.No001.csproj
+++ b/Sources/Samples/CLK.Settings.Samples.No001/CLK.Settings.Samples.No001.csproj
@@ -47,6 +47,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\CLK.Configuration\CLK.Configuration.csproj">
+      <Project>{d821cfe4-a1c8-4252-8929-4404155ad5dd}</Project>
+      <Name>CLK.Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Libraries\CLK\CLK.csproj">
+      <Project>{55a100b9-e43e-4e90-a2d8-2b5e5ef31490}</Project>
+      <Name>CLK</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
