--- a/Sources/Samples/CLK.Settings.Samples.No004/App.config
+++ b/Sources/Samples/CLK.Settings.Samples.No004/App.config
@@ -1,6 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  
+  
+  <!--ConnectionStrings-->
+  <connectionStrings>
+    <add name="Database01" connectionString="Data Source=192.168.1.1;Initial Catalog=DB01;" />    
+    <add name="Database02" connectionString="Data Source=192.168.2.2;Initial Catalog=DB02;" />
+  </connectionStrings>
+
+  
+  <!--AppSettings-->
+  <appSettings>
+    <add key="Argument01" value="XXXXXXXXXXXXX" />
+    <add key="Argument02" value="YYYYYYYYYYYYY" />
+    <add key="Argument03" value="ZZZZZZZZZZZZZ" />
+  </appSettings>
+  
+
 </configuration>
