CLK.ServiceModel : 加入ConnectionProxyHost

--- a/Sources/Libraries/CLK.ServiceModel/CLK.ServiceModel.csproj
+++ b/Sources/Libraries/CLK.ServiceModel/CLK.ServiceModel.csproj
@@ -43,10 +43,12 @@
     <Compile Include="ConnectionServiceHost.cs" />
     <Compile Include="ConnectionServiceProvider.cs" />
     <Compile Include="ConnectionServiceProviderLocator.cs" />
+    <Compile Include="Exceptions\ExecuteIgnoredException.cs" />
     <Compile Include="IConnectionService.cs" />
     <Compile Include="ConnectionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConnectionProxy.cs" />
+    <Compile Include="ConnectionProxyHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CLK\CLK.csproj">
