--- a/Sources/Libraries/CLK/CLK.csproj
+++ b/Sources/Libraries/CLK/CLK.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Settings\SettingContext.cs" />
     <Compile Include="Settings\SettingDictionary.cs" />
     <Compile Include="Threading\PortableStarterStoperLock.cs" />
+    <Compile Include="Threading\PortableTimer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
