CLK.ServiceMode : 重構CLK.ServiceModelV3

--- a/Sources/Libraries/CLK.ServiceModelV3/CLK.ServiceModelV3.csproj
+++ b/Sources/Libraries/CLK.ServiceModelV3/CLK.ServiceModelV3.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionProxyCallbackAgent.cs" />
+    <Compile Include="ConnectionProxyMediator.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="ConnectionHost.cs" />
     <Compile Include="ConnectionProxy.cs" />
