--- a/Sources/Libraries/CLK/CLK.csproj
+++ b/Sources/Libraries/CLK/CLK.csproj
@@ -14,8 +14,10 @@
     <TargetFrameworkProfile>Profile158</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <FileUpgradeFlags></FileUpgradeFlags>
-    <UpgradeBackupLocation></UpgradeBackupLocation>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -37,7 +39,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
-    <Folder Include="Reflection\Implementation\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\IStoreProvider.cs" />
@@ -62,13 +63,17 @@
     <Compile Include="Reflection\IReflectRepository.cs" />
     <Compile Include="Reflection\ReflectBuilder.cs" />
     <Compile Include="Reflection\ReflectBuilderRepository.cs" />
-    <Compile Include="Reflection\ReflectContext.cs" />
+    <Compile Include="Reflection\ReflectContext.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Reflection\ReflectSection.cs" />
+    <Compile Include="Reflection\ReflectSectionRepository.cs" />
     <Compile Include="Reflection\ReflectSectionDictionary.cs" />
     <Compile Include="Reflection\ReflectSetting.cs" />
+    <Compile Include="Reflection\ReflectBuilderDictionary.cs" />
     <Compile Include="Settings\Implementation\MemorySettingContext.cs" />
     <Compile Include="Settings\Implementation\MemorySettingRepository.cs" />
-    <Compile Include="Settings\ISettingRepository.cs" />
+    <Compile Include="Settings\SettingRepository.cs" />
     <Compile Include="Settings\SettingContext.cs" />
     <Compile Include="Settings\SettingDictionary.cs" />
     <Compile Include="Threading\PortableStarterStoperLock.cs" />
