--- a/Sources/Libraries/CLK/CLK.csproj
+++ b/Sources/Libraries/CLK/CLK.csproj
@@ -14,8 +14,10 @@
     <TargetFrameworkProfile>Profile158</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <FileUpgradeFlags></FileUpgradeFlags>
-    <UpgradeBackupLocation></UpgradeBackupLocation>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -58,6 +60,8 @@
     <Compile Include="Operation\Implementation\FixedComponentBrokerRepository.cs" />
     <Compile Include="Operation\OperateContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflection\Extensions\ReflectSettingTransformExtension.cs" />
+    <Compile Include="Reflection\Extensions\ReflectBuilderTransformExtension.cs" />
     <Compile Include="Reflection\IReflectRepository.cs" />
     <Compile Include="Reflection\ReflectBuilder.cs" />
     <Compile Include="Reflection\ReflectBuilderRepository.cs" />
