--- a/Sources/Samples/CLK.Reflection.Samples/CLK.Reflection.Samples.csproj
+++ b/Sources/Samples/CLK.Reflection.Samples/CLK.Reflection.Samples.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{386E281E-2A31-42D9-B8B4-EDD8CA5C0799}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{3A470F61-A0B2-489C-8C35-E54500DD94D7}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CLK.Reflection.Samples.No001</RootNamespace>
-    <AssemblyName>CLK.Reflection.Samples.No001</AssemblyName>
+    <RootNamespace>CLK.Reflection.Samples</RootNamespace>
+    <AssemblyName>CLK.Reflection.Samples</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,24 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEntity.cs" />
+    <Compile Include="TestEntityBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\CLK.Configuration\CLK.Configuration.csproj">
-      <Project>{D821CFE4-A1C8-4252-8929-4404155AD5DD}</Project>
-      <Name>CLK.Configuration</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Libraries\CLK\CLK.csproj">
-      <Project>{55A100B9-E43E-4E90-A2D8-2B5E5EF31490}</Project>
+      <Project>{55a100b9-e43e-4e90-a2d8-2b5e5ef31490}</Project>
       <Name>CLK</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CLK.Reflection.Samples\CLK.Reflection.Samples.csproj">
-      <Project>{3a470f61-a0b2-489c-8c35-e54500dd94d7}</Project>
-      <Name>CLK.Reflection.Samples</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
