重整專案結構

--- a/Sources/Domains/CLK.Windows/CLK.Windows.csproj
+++ b/Sources/Domains/CLK.Windows/CLK.Windows.csproj
@@ -51,15 +51,17 @@
     <Compile Include="ComponentModel.Exploring\ExploreContext.cs" />
     <Compile Include="ComponentModel.Pooling\ResourcePool.cs" />
     <Compile Include="ComponentModel.Pooling\ResourceRecord.cs" />
-    <Compile Include="ComponentModel\IObservableCollection.cs" />
+    <Compile Include="ComponentModel\ObservableCollection.cs" />
     <Compile Include="ComponentModel\NativeObservableCollection.cs" />
     <Compile Include="ComponentModel\SynchronizationObservableCollection.cs" />
     <Compile Include="ComponentModel\ThreadSafeObservableCollection.cs" />
+    <Compile Include="ComponentModel\TypedEventHandler.cs" />
+    <Compile Include="ComponentModel\TypedNotifyPropertyChanged.cs" />
+    <Compile Include="ComponentModel\TypedPropertyChangedEventHandler.cs" />
     <Compile Include="Configuration\FreeAttributeConfigurationElement.cs" />
     <Compile Include="Configuration\FreeAttributeConfigurationElementCollection.cs" />
     <Compile Include="Configuration\FreeAttributeDictionary.cs" />
     <Compile Include="Configuration\FreeAttributeProvider.cs" />
-    <Compile Include="Generic\ConvertMapper.cs" />
     <Compile Include="Network.Sockets\MutualUdpClient.cs" />
     <Compile Include="Network.Sockets\RouteUdpClient.cs" />
     <Compile Include="Network.Sockets\RouteUdpClientPool.cs" />
