--- a/Sources/Domains/CLK/CLK.csproj
+++ b/Sources/Domains/CLK/CLK.csproj
@@ -14,8 +14,10 @@
     <TargetFrameworkProfile>Profile158</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <FileUpgradeFlags></FileUpgradeFlags>
-    <UpgradeBackupLocation></UpgradeBackupLocation>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -39,11 +41,8 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Collections\IStoreProvider.cs" />
+    <Compile Include="Collections\StoreProvider.cs" />
     <Compile Include="Collections\StoreDictionary.cs" />
-    <Compile Include="ComponentModel\ITypedNotifyPropertyChanged.cs" />
-    <Compile Include="ComponentModel\TypedEventHandler.cs" />
-    <Compile Include="ComponentModel\TypedPropertyChangedEventHandler.cs" />
     <Compile Include="Diagnostics\DebugContext.cs" />
     <Compile Include="Diagnostics\DebugProvider.cs" />
     <Compile Include="Diagnostics\Implementation\PortableDebugContext.cs" />
@@ -60,7 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\Extensions\ReflectSettingTransformExtension.cs" />
     <Compile Include="Reflection\Extensions\ReflectBuilderTransformExtension.cs" />
-    <Compile Include="Reflection\IReflectRepository.cs" />
+    <Compile Include="Reflection\ReflectRepository.cs" />
     <Compile Include="Reflection\ReflectBuilder.cs" />
     <Compile Include="Reflection\ReflectBuilderRepository.cs" />
     <Compile Include="Reflection\ReflectContext.cs">
